--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto-js": "^4.2.0",
     "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
