--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "crypto-js": "^4.2.0",
     "materialize-css": "^1.0.0-rc.2",
+    "ngx-socket-io": "^4.5.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.1",
     "tslib": "^2.3.0",
